# turtlebot_simulator

./: .gitignore  .hgtags  CHANGELOG.rst  CMakeLists.txt  stack.xml  turtlebot_simulator.rosinstall
turtlebot_gazebo/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
turtlebot_gazebo/launch/: _create.launch  _kobuki.launch  _kobuki.xml  amcl_demo.launch  amcl_demo.launch~  create.launch  gmapping_demo.launch  kobuki.launch  robot.launch  turtlebot_empty_world.launch  turtlebot_playground.launch  turtlebot_world.launch
turtlebot_gazebo/launch/include/: kobuki.launch.xml  roomba.launch.xml
turtlebot_gazebo/launch/includes/: create.launch.xml  kobuki.launch.xml  roomba.launch.xml
turtlebot_gazebo/worlds/: empty.world  playground.world
turtlebot_simulator/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_stage/: .cproject  .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_stage/annotations/: column_list.yaml  wall_list.yaml
turtlebot_stage/launch/: populate_world.launch  turtlebot_in_stage.launch  turtlebot_in_stage_virtual_sensor_enabled.launch  world_canvas_demo.launch
turtlebot_stage/launch/includes/: _amcl.launch  _move_base.launch  _move_base_eband.launch  _virtual_sensor.launch  annotations_pub.launch.xml  move_base.launch.xml  move_base_eband.launch.xml
turtlebot_stage/maps/: edu_room_cropped.pgm  edu_room_cropped.yaml
turtlebot_stage/maps/stage/: turtlebot.inc
turtlebot_stage/param/: costmap_common_params.yaml  eband_planner_params.yaml  vel_multiplexer.yaml  vel_smoother.yaml
turtlebot_stage/param/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  eband_planner_params.yaml  move_base_params.yaml  (+1 more)
turtlebot_stage/rviz/: robot_navigation.rviz
turtlebot_stage/scripts/: publish_world.py
(+26 files in other folders)
